# coral_task_manager

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: c-cpp.yml
cmake/modules/: set_test.cmake
src/: ArgumentPacker.h  CMakeLists.txt  Config.h  CoralTaskManager.h  FunctionTraits.h  PinnedTaskQueue.cpp  PinnedTaskQueue.h  Random.h  Task.cpp  Task.h  TaskBuffer.cpp  TaskBuffer.h  TaskManager.cpp  TaskManager.h  WorkStealingQueue.cpp  WorkStealingQueue.h  WorkerThread.cpp  WorkerThread.h  api.h  argument_packer.h  config.h  coral_task_manager.h  function_traits.h  pinned_task_queue.cpp  pinned_task_queue.h  random.cpp  random.h  task.h  task_buffer.cpp  task_buffer.h  task_manager.cpp  task_manager.h  work_stealing_queue.cpp  work_stealing_queue.h  worker_thread.cpp  worker_thread.h
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  main.cpp
